--- a/Example/config.ini
+++ b/Example/config.ini
@@ -1,3 +1,5 @@
 [Basic]
-ReloadDelaySecond=3
-Editor=SciTE
+IconRun = Content/IconRun.png
+IconStop = Content/IconStop.png
+ReloadDelaySecond = 1
+Editor = SciTE
