--- a/Example/config.ini
+++ b/Example/config.ini
@@ -1,5 +1,11 @@
 [Basic]
-IconRun = Content/IconRun.png
-IconStop = Content/IconStop.png
+;腳本運行圖片
+IconRun=Content/IconRun.png
+;腳本暫停圖片
+IconStop=Content/IconStop.png
+;自動重新載入秒數
 ReloadDelaySecond = 1
+;編輯器
 Editor = SciTE
+;詢問開機啟動
+AskAddToStart=1
